# document-categorization

./: .gitattributes  .gitignore  .gitigonre  CONTRIBUTING.md  README.md  data.md  learning_objectives.md  optimize.py  pyproject.toml  requirements.txt  train.py
.claude/: settings.json
app/: real_time_dashboard.py
data/processed_data/: multilingual_corpus.csv  multilingual_sample.csv
models/: optimization.py  pipeline.py  tagger.py  text_classifier.py
models/checkpoints/: config.json  text_classifier_best.h5  text_classifier_fp16.npz  text_classifier_int8.tflite  text_classifier_pruned.weights.h5  training_history.csv
notebooks/: EDA_and_Training.ipynb  EDA_and_Training.ipynb.ipynb
reports/: example_predictions.csv  optimization_metrics.json  performance_metrics.json
reports/figures/: multilingual_eda_summary.txt
tests/: test_classifiers.py  test_data_fetcher.py  test_data_loader.py  test_language_detector.py  test_optimization.py  test_pipeline.py  test_tagger.py  test_text_cleaning.py  test_tokenization.py
utils/: build_multilingual_dataset.py  config.py  data_fetcher.py  data_loader.py  language_detector.py  text_cleaning.py  tokenization.py
