[project]
name = "document-categorization"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdikheirkhah",email = "mohammad.kheirkhah@gritlab.ax"}
]
readme = "README.md"
requires-python =  ">=3.12,<3.15"
dependencies = [
]

[tool.poetry]
packages = [{include = "utils"}, {include = "models"}, {include = "app"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "jupyterlab (>=4.6.0,<5.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | models/checkpoints
)/
'''