[project]
name = "document-categorization"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdikheirkhah",email = "mohammad.kheirkhah@gritlab.ax"}
]
readme = "README.md"
requires-python =  ">=3.12,<3.15"
dependencies = [
    "datasets (>=5.0.0,<6.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "scikit-learn (>=1.9.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "langdetect (>=1.0.9,<2.0.0)"
]

[tool.poetry]
packages = [{include = "utils"}, {include = "models"}, {include = "app"}, {include = "tests"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "jupyterlab (>=4.6.0,<5.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
  | models/checkpoints
)/
'''

[tool.pytest.ini_options]
pythonpath = [
  "."
]